build_log_schedule_ui.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preWhatsappReleaseBuild UP-TO-DATE
> Task :app:mergeWhatsappReleaseJniLibFolders UP-TO-DATE
> Task :app:mergeWhatsappReleaseNativeLibs UP-TO-DATE
> Task :app:stripWhatsappReleaseDebugSymbols UP-TO-DATE
> Task :app:extractWhatsappReleaseNativeSymbolTables UP-TO-DATE
> Task :app:mergeWhatsappReleaseNativeDebugMetadata NO-SOURCE
> Task :app:buildKotlinToolingMetadata UP-TO-DATE
> Task :app:checkWhatsappReleaseDuplicateClasses UP-TO-DATE
> Task :app:compileWhatsappReleaseAidl UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:dataBindingMergeDependencyArtifactsWhatsappRelease UP-TO-DATE
> Task :app:generateWhatsappReleaseMaterialThemeBuilderRes
> Task :app:generateWhatsappReleaseResValues UP-TO-DATE
> Task :app:generateWhatsappReleaseResources UP-TO-DATE
> Task :app:mergeWhatsappReleaseResources UP-TO-DATE
> Task :app:packageWhatsappReleaseResources UP-TO-DATE
> Task :app:processWhatsappReleaseNavigationResources UP-TO-DATE
> Task :app:parseWhatsappReleaseLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesWhatsappRelease UP-TO-DATE
> Task :app:generateWhatsappReleaseBuildConfig
> Task :app:generateWhatsappReleaseMaterialThemeBuilderSource
> Task :app:checkWhatsappReleaseAarMetadata UP-TO-DATE
> Task :app:compileWhatsappReleaseNavigationResources UP-TO-DATE
> Task :app:mapWhatsappReleaseSourceSetPaths UP-TO-DATE
> Task :app:createWhatsappReleaseCompatibleScreenManifests
> Task :app:extractDeepLinksWhatsappRelease UP-TO-DATE
> Task :app:processWhatsappReleaseMainManifest
> Task :app:processWhatsappReleaseManifest
> Task :app:preBusinessReleaseBuild UP-TO-DATE
> Task :app:compileBusinessReleaseAidl UP-TO-DATE

> Task :app:fixAidlGeneratedJava
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\businessRelease\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\whatsappRelease\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched 2 file(s).

> Task :app:javaPreCompileWhatsappRelease UP-TO-DATE
> Task :app:mergeWhatsappReleaseArtProfile UP-TO-DATE
> Task :app:extractProguardFiles UP-TO-DATE
> Task :app:mergeWhatsappReleaseStartupProfile UP-TO-DATE
> Task :app:mergeWhatsappReleaseShaders UP-TO-DATE
> Task :app:compileWhatsappReleaseShaders NO-SOURCE
> Task :app:generateWhatsappReleaseAssets UP-TO-DATE
> Task :app:mergeWhatsappReleaseAssets UP-TO-DATE
> Task :app:compressWhatsappReleaseAssets UP-TO-DATE
> Task :app:extractWhatsappReleaseVersionControlInfo
> Task :app:collectWhatsappReleaseDependencies UP-TO-DATE
> Task :app:sdkWhatsappReleaseDependencyData UP-TO-DATE
> Task :app:validateSigningWhatsappRelease UP-TO-DATE
> Task :app:writeWhatsappReleaseAppMetadata UP-TO-DATE
> Task :app:writeWhatsappReleaseSigningConfigVersions UP-TO-DATE
> Task :app:processWhatsappReleaseManifestForPackage
> Task :app:processWhatsappReleaseResources
> Task :app:compileWhatsappReleaseKotlin NO-SOURCE

> Task :app:compileWhatsappReleaseJavaWithJavac
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
            int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                             ^
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
            int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                        ^
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
            int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                                     ^
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
            int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                                                  ^
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
            int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                                                              ^
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:209: error: incompatible types: int cannot be converted to String
                View chip = createChip(activity, opt[0], opt[1], chipContainer, selectedMins, customPickerGroup);
                                                    ^
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:289: error: cannot find symbol
        int txt = selected ? Color.WHITE : DesignUtils.getPrimaryTextColor();
                             ^
  symbol:   variable Color
  location: class MessageScheduler
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors

> Task :app:compileWhatsappReleaseJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Project/WaEnhancer/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileWhatsappReleaseJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
              int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                               ^
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
              int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                          ^
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
              int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                                       ^
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
              int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                                                    ^
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:207: error: incompatible types: String cannot be converted to int
              int[][] opts = {{"5m", 5}, {"10m", 10}, {"30m", 30}, {"1h", 60}, {"Custom", -1}};
                                                                                ^
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:209: error: incompatible types: int cannot be converted to String
                  View chip = createChip(activity, opt[0], opt[1], chipContainer, selectedMins, customPickerGroup);
                                                      ^
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\MessageScheduler.java:289: error: cannot find symbol
          int txt = selected ? Color.WHITE : DesignUtils.getPrimaryTextColor();
                               ^
    symbol:   variable Color
    location: class MessageScheduler
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  7 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 8s
43 actionable tasks: 11 executed, 32 up-to-date
